Expose MBS sensor delivery groups in HALO
